force-app/main/default/objects/Account/fields/Acepta_PPR__c.field-meta.xml
<CustomField>
    <fullName>Acepta_PPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Se acepto oferta de PPR?</label>
    <type>Checkbox</type>
</CustomField>