force-app/main/default/objects/Account/fields/Actinver_Madrid__c.field-meta.xml
<CustomField>
    <fullName>Actinver_Madrid__c</fullName>
    <label>Actinver Madrid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>