force-app/main/default/objects/Account/fields/Actinver_Mexico__c.field-meta.xml
<CustomField>
    <fullName>Actinver_Mexico__c</fullName>
    <label>Actinver México</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>