force-app/main/default/objects/Account/fields/Actinver_Securities__c.field-meta.xml
<CustomField>
    <fullName>Actinver_Securities__c</fullName>
    <label>Actinver Securities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>