force-app/main/default/objects/Account/fields/Agrega_un_referido__c.field-meta.xml
<CustomField>
    <fullName>Agrega_un_referido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Busca por nombre</inlineHelpText>
    <label>Agrega un referido</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Agrega un referido)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>