force-app/main/default/objects/Account/fields/Alguien_InfluyeEnTuPatrimonio__c.field-meta.xml
<CustomField>
    <fullName>Alguien_InfluyeEnTuPatrimonio__c</fullName>
    <inlineHelpText>¿Tienes algún familiar directo o cercano que pueda influir en el crecimiento de tu patrimonio?</inlineHelpText>
    <label>¿Alguien influye en tu patrimonio?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madre</fullName>
            </value>
            <value>
                <fullName>Padre</fullName>
            </value>
            <value>
                <fullName>Hermano/a</fullName>
            </value>
            <value>
                <fullName>Esposo/a - Conyuge</fullName>
            </value>
            <value>
                <fullName>Hijo/a</fullName>
            </value>
            <value>
                <fullName>Suegro/a</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>