force-app/main/default/objects/Account/fields/Archivo_Razonabilidad_Cargado__c.field-meta.xml
<CustomField>
    <fullName>Archivo_Razonabilidad_Cargado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que muestra si el archivo de Razonabilidad ya fue cargado</description>
    <label>Archivo Razonabilidad Cargado</label>
    <type>Checkbox</type>
</CustomField>