force-app/main/default/objects/Account/fields/Avance_FAC__c.field-meta.xml
<CustomField>
    <fullName>Avance_FAC__c</fullName>
    <formula>IF(
  AvanceNum1FAC__c = 0,
  0,
  IF(
    (AvanceNum2FAC__c / AvanceNum1FAC__c) &gt;= 0.9,
    1,
    (AvanceNum2FAC__c / AvanceNum1FAC__c)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avance FAC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>