force-app/main/default/objects/Account/fields/AvanceNum1FAC__c.field-meta.xml
<CustomField>
    <fullName>AvanceNum1FAC__c</fullName>
    <label>AvanceNum1FAC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>