force-app/main/default/objects/Account/fields/AvanceNum2FAC__c.field-meta.xml
<CustomField>
    <fullName>AvanceNum2FAC__c</fullName>
    <label>AvanceNum2FAC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>