force-app/main/default/objects/Account/fields/Bandera_de_Churn__c.field-meta.xml
<CustomField>
    <fullName>Bandera_de_Churn__c</fullName>
    <formula>IF( F3_Posicion_Global__c &lt;= 5000, 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bandera de Churn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>