force-app/main/default/objects/Account/fields/BanqueroAsignado__c.field-meta.xml
<CustomField>
    <fullName>BanqueroAsignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banquero Asignado</label>
    <referenceTo>BranchUnitBusinessMember</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>