force-app/main/default/objects/Account/fields/Batch_Conversion_Errors__c.field-meta.xml
<CustomField>
    <fullName>Batch_Conversion_Errors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Conversion Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>