force-app/main/default/objects/Account/fields/BeneficiosRecompensa__c.field-meta.xml
<CustomField>
    <fullName>BeneficiosRecompensa__c</fullName>
    <label>Beneficios de recompensa lealtad</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puntos de lealtad</fullName>
            </value>
            <value>
                <fullName>Tasas competitivas</fullName>
            </value>
            <value>
                <fullName>Experiencias</fullName>
            </value>
            <value>
                <fullName>Millas</fullName>
            </value>
            <value>
                <fullName>Espectáculos</fullName>
            </value>
            <value>
                <fullName>Tarjetas de regalo</fullName>
            </value>
            <value>
                <fullName>Eventos culturales</fullName>
            </value>
            <value>
                <fullName>Artículos promocionales</fullName>
            </value>
            <value>
                <fullName>Descuentos en establecimientos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>