force-app/main/default/objects/Account/fields/Birth_City__c.field-meta.xml
<CustomField>
    <fullName>Birth_City__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Estado de Nacimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>