force-app/main/default/objects/Account/fields/Branch_Unit__c.field-meta.xml
<CustomField>
    <fullName>Branch_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sucursal Asignada</description>
    <label>Branch Unit</label>
    <referenceTo>BranchUnit</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>