force-app/main/default/objects/Account/fields/BusinessName__c.field-meta.xml
<CustomField>
    <fullName>BusinessName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Razón Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>