force-app/main/default/objects/Account/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName>
    <label># de Hijos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>