force-app/main/default/objects/Account/fields/CHR_Monto_primer_deposito_global__c.field-meta.xml
<CustomField>
    <fullName>CHR_Monto_primer_deposito_global__c</fullName>
    <label>Monto primer depósito global</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>