force-app/main/default/objects/Account/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>Identificador Cliente</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>