force-app/main/default/objects/Account/fields/Cliente_relacionado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_relacionado__c</fullName>
    <label>Selecciona el parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madre</fullName>
            </value>
            <value>
                <fullName>Padre</fullName>
            </value>
            <value>
                <fullName>Hermano/a</fullName>
            </value>
            <value>
                <fullName>Esposo/a - Conyuge</fullName>
            </value>
            <value>
                <fullName>Hijo/a</fullName>
            </value>
            <value>
                <fullName>Suegro/a</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>