force-app/main/default/objects/Account/fields/ClientesRelacionados__c.field-meta.xml
<CustomField>
    <fullName>ClientesRelacionados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clientes relacionados</label>
    <type>Checkbox</type>
</CustomField>