force-app/main/default/objects/Account/fields/Conqueempresaestasasegurado__c.field-meta.xml
<CustomField>
    <fullName>Conqueempresaestasasegurado__c</fullName>
    <label>¿Con qué empresa estas asegurado?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actinver</fullName>
            </value>
            <value>
                <fullName>Quálitas Seguro</fullName>
            </value>
            <value>
                <fullName>Grupo Nacional Provincial (GNP)</fullName>
            </value>
            <value>
                <fullName>Chubb Seguros</fullName>
            </value>
            <value>
                <fullName>BBVA Seguros</fullName>
            </value>
            <value>
                <fullName>Axa Seguros</fullName>
            </value>
            <value>
                <fullName>HDI Seguros</fullName>
            </value>
            <value>
                <fullName>Mapfre</fullName>
            </value>
            <value>
                <fullName>MapfreSeguros Banorte</fullName>
            </value>
            <value>
                <fullName>MapfreSeguros Afirme</fullName>
            </value>
            <value>
                <fullName>MapfreSeguros Inbursa</fullName>
            </value>
            <value>
                <fullName>MapfreMetLife</fullName>
            </value>
            <value>
                <fullName>MapfreSeguros Argos</fullName>
            </value>
            <value>
                <fullName>MapfreZurich Santander</fullName>
            </value>
            <value>
                <fullName>MapfreSeguros Citibanamex</fullName>
            </value>
            <value>
                <fullName>MapfreHSBC Seguros</fullName>
            </value>
            <value>
                <fullName>Seguros Monterrey New York Life</fullName>
            </value>
            <value>
                <fullName>Deco Seguros</fullName>
            </value>
            <value>
                <fullName>Prudential</fullName>
            </value>
            <value>
                <fullName>Zurich Aseguradora Mexicana</fullName>
            </value>
            <value>
                <fullName>Solunion México</fullName>
            </value>
            <value>
                <fullName>Tokio Marine Compañía de Seguros</fullName>
            </value>
            <value>
                <fullName>Seguros Atlas</fullName>
            </value>
            <value>
                <fullName>Allianz México</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>