force-app/main/default/objects/Account/fields/Conquetipodeseguroscuentas__c.field-meta.xml
<CustomField>
    <fullName>Conquetipodeseguroscuentas__c</fullName>
    <label>¿Con qué tipo de seguros cuentas?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seguro de Auto</fullName>
            </value>
            <value>
                <fullName>Seguro de Gastos Médicos Mayores</fullName>
            </value>
            <value>
                <fullName>Seguro de Vida</fullName>
            </value>
            <value>
                <fullName>Seguro de Hogar</fullName>
            </value>
            <value>
                <fullName>Seguro de Accidentes Personales</fullName>
            </value>
            <value>
                <fullName>Seguro Educativo</fullName>
            </value>
            <value>
                <fullName>Seguro Mascotas</fullName>
            </value>
            <value>
                <fullName>Seguros de Ahorro o Inversión (Dotal)</fullName>
            </value>
            <value>
                <fullName>Seguro de Viaje</fullName>
            </value>
            <value>
                <fullName>Seguro de Bicicleta</fullName>
            </value>
            <value>
                <fullName>Seguro de Vida e inversión</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>