force-app/main/default/objects/Account/fields/Contactado__c.field-meta.xml
<CustomField>
    <fullName>Contactado__c</fullName>
    <formula>OR(
  ISPICKVAL(EstatusContacto__c, &quot;Contacto efectivo exitoso&quot;),
  ISPICKVAL(EstatusContacto__c, &quot;Contacto no exitoso&quot;),
  ISPICKVAL(EstatusContacto__c, &quot;Cliente no quiere ser contactado&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contactado</label>
    <type>Checkbox</type>
</CustomField>