force-app/main/default/objects/Account/fields/ContactarHoy__c.field-meta.xml
<CustomField>
    <fullName>ContactarHoy__c</fullName>
    <formula>IF(  
    AND(FechaSiguienteContacto__c =  TODAY()
       , OR(ISPICKVAL( EstatusContacto__c ,&quot;Pendiente&quot;),ISPICKVAL( EstatusContacto__c ,&quot;Contacto no exitoso&quot;)) 
       , NoRequiereSerContactado__c = false) 
   , true
   , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contactar hoy</label>
    <type>Checkbox</type>
</CustomField>