force-app/main/default/objects/Account/fields/ContactarVencidoVigente__c.field-meta.xml
<CustomField>
    <fullName>ContactarVencidoVigente__c</fullName>
    <formula>IF(  
    AND(FechaSiguienteContacto__c &lt;=  TODAY()
       , NoRequiereSerContactado__c = false
       , OR(ISPICKVAL( EstatusContacto__c ,&quot;Pendiente&quot;),ISPICKVAL( EstatusContacto__c ,&quot;Contacto no exitoso&quot;)) 
       ) 
   , true
   , false)</formula>
    <label>Contactar vencido o vigente</label>
    <type>Checkbox</type>
</CustomField>