force-app/main/default/objects/Account/fields/ContactoEsteMes__c.field-meta.xml
<CustomField>
    <fullName>ContactoEsteMes__c</fullName>
    <formula>IF(MONTH(FechaSiguienteContacto__c) == MONTH(TODAY()), true, false)</formula>
    <label>Contacto este mes</label>
    <type>Checkbox</type>
</CustomField>