force-app/main/default/objects/Account/fields/ContactoPriorizadoEsteMes__c.field-meta.xml
<CustomField>
    <fullName>ContactoPriorizadoEsteMes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacto priorizado este mes</label>
    <type>Checkbox</type>
</CustomField>