force-app/main/default/objects/Account/fields/Contratos_diferente_a_Cancelado__c.field-meta.xml
<CustomField>
    <fullName>Contratos_diferente_a_Cancelado__c</fullName>
    <label>Contratos diferente a Cancelado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>