force-app/main/default/objects/Account/fields/Country_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pais Nacimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>