force-app/main/default/objects/Account/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Lada</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>