force-app/main/default/objects/Account/fields/CR_EV_Perfil_Asesor__c.field-meta.xml
<CustomField>
    <fullName>CR_EV_Perfil_Asesor__c</fullName>
    <formula>Owner.Profile.Name</formula>
    <label>Perfil del Asesor</label>
    <type>Text</type>
</CustomField>