force-app/main/default/objects/Account/fields/CR_ME_Probabilidad_Recomendar_Actinver__c.field-meta.xml
<CustomField>
    <fullName>CR_ME_Probabilidad_Recomendar_Actinver__c</fullName>
    <label>Probabilidad de Recomendar Actinver</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>