force-app/main/default/objects/Account/fields/CuandoVence__c.field-meta.xml
<CustomField>
    <fullName>CuandoVence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>¿Cuándo vence?</label>
    <type>Date</type>
</CustomField>