force-app/main/default/objects/Account/fields/Cuenta_Wealth_Management__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Wealth_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuenta Wealth Management</label>
    <type>Checkbox</type>
</CustomField>