force-app/main/default/objects/Account/fields/CuentaDuplicada_FIX__c.field-meta.xml
<CustomField>
    <fullName>CuentaDuplicada_FIX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El campo se eliminará una vez que se solucionen ek incidente con las integraciones (SAP) 17 Julio 2025</description>
    <label>CuentaDuplicada_FIX</label>
    <type>Checkbox</type>
</CustomField>