force-app/main/default/objects/Account/fields/Cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Cumplimiento__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(EstatusContacto__c, &quot;Contacto Efectivo Exitoso&quot;),
    ISPICKVAL(EstatusContacto__c, &quot;Contacto No Exitoso&quot;),
    ISPICKVAL(EstatusContacto__c, &quot;Cliente No Quiere Ser Contactado&quot;)
  ),
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumplimiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>