force-app/main/default/objects/Account/fields/depatrimoniofinancierototalenActinver__c.field-meta.xml
<CustomField>
    <fullName>depatrimoniofinancierototalenActinver__c</fullName>
    <inlineHelpText>Porcentaje de tu patrimonio financiero total, tienes con Actinver</inlineHelpText>
    <label>% de patrimonio financiero en Actinver</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>