force-app/main/default/objects/Account/fields/Diagn_stico_Patrimonial_Realizado__c.field-meta.xml
<CustomField>
    <fullName>Diagn_stico_Patrimonial_Realizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnóstico Patrimonial Realizado</label>
    <type>Checkbox</type>
</CustomField>