force-app/main/default/objects/Account/fields/DivisionPropietario__c.field-meta.xml
<CustomField>
    <fullName>DivisionPropietario__c</fullName>
    <formula>Owner.F3_Division__c</formula>
    <label>División</label>
    <type>Text</type>
</CustomField>