force-app/main/default/objects/Account/fields/EconomicActivity__c.field-meta.xml
<CustomField>
    <fullName>EconomicActivity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actividad Económica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>